mType/tests/testFiles/import/error/circular4way/ModuleD.mt
import { ClassA } from "./ModuleA.mt"

class ClassD {
    fun useA(): String {
        var a = ClassA();
        return "D uses A (CIRCULAR!)";
    }
}
